--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -30,10 +30,18 @@ jobs:
           git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
         # We currently compile against C++17 so default gcc and clang on ubuntu-latest are too old
       - name: Install dependencies
-        run: sudo apt update && sudo apt install -y ninja-build ccache clang gcc-${{ matrix.version }} g++-${{ matrix.version }} clang-${{ matrix.version }}
+        run: sudo apt update && sudo apt install -y ninja-build ccache clang lcov gcc-${{ matrix.version }} g++-${{ matrix.version }} clang-${{ matrix.version }}
       - name: Configure
-        run: cmake -GNinja -H. -B../Build -DNDR_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }}-${{ matrix.version }} -DCMAKE_BUILD_TYPE=${{ matrix.type }}
+        run: cmake -GNinja -H. -B../Build -DNDR_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }}-${{ matrix.version }} -DCMAKE_BUILD_TYPE=${{ matrix.type }} -DNDR_CODE_COVERAGE=ON
       - name: Build
         run: cmake --build ../Build
       - name: Test
         run: cd ../Build && ctest -j2 -V
+      - name: Coverage
+        if: ${{ matrix.type == 'Debug' && matix.compiler == 'g++' }}
+        run: |
+          cd ../Build
+          lcov --directory . --capture --output-file coverage.info
+          lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info
+          locv --list coverage.info
+          bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage report"
