Specify the gcov binary to match the compiler

--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: sudo apt update && sudo apt install -y ninja-build ccache clang lcov gcc-${{ matrix.version }} g++-${{ matrix.version }} clang-${{ matrix.version }}
       - name: Configure
-        run: cmake -GNinja -H. -B../Build -DNDR_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }}-${{ matrix.version }} -DCMAKE_BUILD_TYPE=${{ matrix.type }} -DNDR_CODE_COVERAGE=ON
+        run: cmake -GNinja -H. -B../Build -DNDR_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }}-${{ matrix.version }} -DCMAKE_BUILD_TYPE=${{ matrix.type }} -DNDR_CODE_COVERAGE=ON -DCOVERAGE_COMMAND=/usr/bin/gcov-${{ matrix.version }}
       - name: Build
         run: cmake --build ../Build
       - name: Test
@@ -41,7 +41,7 @@ jobs:
         if: ${{ matrix.type == 'Debug' && matrix.compiler == 'g++' }}
         run: |
           cd ../Build
-          lcov --directory . --capture --output-file coverage.info
+          lcov --directory . --capture --gcov-tool /usr/bin/gcov-${{ matrix.version }} --output-file coverage.info
           lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info
           locv --list coverage.info
           bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage report"
