--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -11,7 +11,7 @@ on: #[push, pull_request]
 jobs:
   linux-build:
     name: Compilation
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         version: [9]
