Upload reports to Codacy

--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -49,3 +49,9 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           file: ../Build/coverage.info
+      - name: Upload coverage report to codact
+        if: ${{ matrix.type == 'Debug' && matrix.compiler == 'g++' }}
+        uses: codacy/codacy-coverage-reporter-action@master
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: ../Build/coverage.info
