Don't use the codacy action, use raw commands
The action uses a docker container and makes this mapping:
"/home/runner/work/nuclear-data-reader/nuclear-data-reader":"/github/workspace"

We then try and upload ../Build/coverage.info which becomes:
/github/workspace/../Build/coverage.info

This file doesn't exist. Is this because docker does not have it
mapped?

A build directory inside the repo may avoid this issue.

--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -51,10 +51,10 @@ jobs:
           file: ../Build/coverage.info
       - name: Upload coverage report to codacy
         if: ${{ matrix.type == 'Debug' && matrix.compiler == 'g++' }}
-        uses: codacy/codacy-coverage-reporter-action@master
-        run :
-          pwd
-          ls
-        with:
-          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          coverage-reports: ./Build/coverage.info
+        # uses: codacy/codacy-coverage-reporter-action@master
+        # with:
+        #   project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        #   coverage-reports: ./Build/coverage.info
+        run: |
+          export CODACY_PROJECT_TOKEN=${{ secrets.CODACY_PROJECT_TOKEN }}
+          bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r ../Build/coverage.info
