--- a/include/nuclear-data-reader/CMakeLists.txt
+++ b/include/nuclear-data-reader/CMakeLists.txt
@@ -3,6 +3,9 @@
 set(HEADERS
   ame_data.hpp
   ame_line_position.hpp
+  ame_mass_position.hpp
+  ame_reaction1_position.hpp
+  ame_reaction2_position.hpp
   converter.hpp
   isotope.hpp
   massTable.hpp
