--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        compiler: [clang++, g++]
+        compiler: [clang++-12, g++-11]
         type: [Debug, Release]
 
     steps:
@@ -28,7 +28,10 @@ jobs:
           git submodule sync --recursive
           git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
       - name: Install dependencies
-        run: sudo apt update && sudo apt install -y ninja-build ccache clang lcov gcc g++ clang
+        run: |
+          # add a repository to get access to gcc v11
+          sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+          sudo apt update && sudo apt install -y ninja-build ccache lcov gcc-11 g++-11 clang-12
       - name: Configure
         run: cmake -GNinja -H. -B../Build -DNDR_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }} -DCMAKE_BUILD_TYPE=${{ matrix.type }} -DNDR_CODE_COVERAGE=ON
       - name: Build
@@ -36,19 +39,19 @@ jobs:
       - name: Test
         run: cd ../Build && ctest -j2 -V
       - name: Generate coverage report
-        if: ${{ matrix.type == 'Debug' && matrix.compiler == 'g++' }}
+        if: ${{ matrix.type == 'Debug' && matrix.compiler == 'g++-11' }}
         run: |
           cd ../Build
           lcov --directory . --capture --gcov-tool /usr/bin/gcov --output-file coverage.info
           lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info
           lcov --list coverage.info
       - name: Upload coverage report to codecov
-        if: ${{ matrix.type == 'Debug' && matrix.compiler == 'g++' }}
+        if: ${{ matrix.type == 'Debug' && matrix.compiler == 'g++-11' }}
         uses: codecov/codecov-action@v1
         with:
           file: ../Build/coverage.info
       - name: Upload coverage report to codacy
-        if: ${{ matrix.type == 'Debug' && matrix.compiler == 'g++' }}
+        if: ${{ matrix.type == 'Debug' && matrix.compiler == 'g++-11' }}
         # uses: codacy/codacy-coverage-reporter-action@master
         # with:
         #   project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
