--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -33,8 +33,7 @@ jobs:
           sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
           sudo apt update && sudo apt install -y ninja-build ccache lcov gcc-11 g++-11 clang-12
       - name: Configure
-        # FIXME: gcov binary should be generic
-        run: cmake -GNinja -H. -B../Build -DNDR_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }} -DCMAKE_BUILD_TYPE=${{ matrix.type }} -DCOVERAGE_COMMAND=/usr/bin/gcov-11 -DNDR_CODE_COVERAGE=ON
+        run: cmake -GNinja -H. -B../Build -DNDR_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }} -DCMAKE_BUILD_TYPE=${{ matrix.type }} -DNDR_CODE_COVERAGE=ON
       - name: Build
         run: cmake --build ../Build
       - name: Test
@@ -43,7 +42,8 @@ jobs:
         if: ${{ matrix.type == 'Debug' && matrix.compiler == 'g++-11' }}
         run: |
           cd ../Build
-          lcov --directory . --capture --gcov-tool /usr/bin/gcov --output-file coverage.info
+          #FIXME: gcov binary should be generic
+          lcov --directory . --capture --gcov-tool /usr/bin/gcov-11 --output-file coverage.info
           lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info
           lcov --list coverage.info
       - name: Upload coverage report to codecov
