Specify the 2022 windows runner to try and get access to C++20
The configuration was passing, but had the following info messages
```
-- CXX_STANDARD: 20
-- Performing Test has_std_20_flag
-- Performing Test has_std_20_flag - Failed
-- Performing Test has_std_2a_flag
-- Performing Test has_std_2a_flag - Failed
```
and the build was then failing with what look errors relating to no
knowing about C++20 features.

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -11,7 +11,7 @@ on: #[push, pull_request]
 jobs:
   windows-build:
     name: Compilation
-    runs-on: windows-latest
+    runs-on: windows-2022
     strategy:
       matrix:
         type: [Debug, Release]
