Compile into a static library on windows
For reasons I can't currently get to the bottom of, I'm not able to
make the necessary lib file which allows the library to be used. As a
result the tests can't link. The issue does not exist if building into
a static library so we will do that on windows for the moment.

Setting the path to the data directory was also causing issues
with compilation in one scenario and resolving the path if the
compilation was fixed. Setting the path via a definition flag allows
compilation and execution as expected.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,16 @@ set(SOURCES
   ${SOURCE_DIR}/isotope.cpp
   )
 
-add_library(${PROJECT_NAME} SHARED ${SOURCES})
+# While I try and work out how to create a shared library
+# on windows that can actually be linked to, lets make a static one
+if(MSVC)
+  add_library(${PROJECT_NAME} STATIC ${SOURCES})
+else()
+  add_library(${PROJECT_NAME} SHARED ${SOURCES})
+endif()
+
+# Use a compile time definition to set the path to the data files
+add_compile_definitions(${PROJECT_NAME} PRIVATE NDR_DATA_PATH=\"${PROJECT_SOURCE_DIR}/data/\")
 
 # Where are the header files
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include/)
