--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ endif()
 
 # Use a compile time definition to set the path to the data files
 add_compile_definitions(${PROJECT_NAME} PRIVATE NDR_DATA_PATH=\"${PROJECT_SOURCE_DIR}/data/\")
+message(STATUS "Setting the data path as: ${PROJECT_SOURCE_DIR}/data")
 
 # Where are the header files
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include/)
