--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [11]
+        version: 11
         compiler: [clang++-12, g++-${{ version }}]
         type: [Debug, Release]
 
