Don't run the other OSs pipeline when a change is made to an action

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -7,6 +7,7 @@ on: #[push, pull_request]
       - 'docs/**'
       - 'data/**'
       - 'scripts/**'
+      - '.github/workflows/windows.yml'
 
 jobs:
   linux-build:
