--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -7,6 +7,7 @@ on: #[push, pull_request]
       - 'docs/**'
       - 'data/**'
       - 'scripts/**'
+      - '.github/workflows/linux.yml'
 
 jobs:
   windows-build:
