--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -1,5 +1,16 @@
+path_classifiers:
+  test:
+    - tests
 extraction:
   cpp:
     prepare:
       packages:
-        - g++-11
+        - ninja-build
+      script:
+        - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+        - sudo apt update && apt install -y gcc-11 g++-11
+    configure:
+      command:
+        - cmake -GNinja -H. -Bbuild -DCMAKE_BUILD_TYPE=Debug
+    index:
+      build_command: cmake --build ./build
