No need to run the actions if the LGTM config file changes

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -8,6 +8,7 @@ on: #[push, pull_request]
       - 'data/**'
       - 'scripts/**'
       - '.github/workflows/windows.yml'
+      - '.lgtm.yml'
 
 jobs:
   linux-build:
