--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -8,8 +8,8 @@ extraction:
         - ccache
         - ninja-build
       script:
-        - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-        - sudo apt update && apt install -y gcc-11 g++-11
+        - add-apt-repository -y ppa:ubuntu-toolchain-r/test
+        - apt update && apt install -y gcc-11 g++-11
     configure:
       command:
         - cmake -GNinja -H. -Bbuild -DCMAKE_CXX_COMPILER=/usr/bin/g++-11 -DCMAKE_BUILD_TYPE=Debug
