We know it's c++, don't make CodeQL guess

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v1
+        with:
+          languages: cpp
 
       - name: Build the project
         uses: github/codeql-action/autobuild@v1
