--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -10,11 +10,17 @@ on:
       - '.github/workflows/windows.yml'
 
 jobs:
-  CodeQL-Build:
+  analyse:
+    name: Analyse
     runs-on: ubuntu-latest
 
     permissions:
+      actions: read
+      contents: read
       security-events: write
+
+    strategy:
+      fail-fast: false
 
     steps:
       - name: Checkout repository
@@ -22,6 +28,7 @@ jobs:
         with:
           submodules: true
 
+      # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v1
         with:
