Install additional required packages
LGTM installs packages during cmake configuration, as they are
requried. As we know what's missing, install beforehand.

--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -5,7 +5,10 @@ extraction:
   cpp:
     prepare:
       packages:
-        - ccache
+        - clang-12
+        - llvm-12-dev
+        - llvm-12-runtime
+        - libtbb2
         - ninja-build
     configure:
       command:
