Even more additional packages
Still getting compilation failures in LGTM. It is now using
focal(20.04) and clang 12 which works on github actions. Dose LGTM use
an ultra-thin container with minimal packages?

--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -5,10 +5,13 @@ extraction:
   cpp:
     prepare:
       packages:
+        - build-essential
         - clang-12
+        - llvm
         - llvm-12-dev
         - llvm-12-runtime
         - libtbb2
+        - libtbb-dev
         - ninja-build
     configure:
       command:
