--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 # The project knows Catch2 exits, but include this file to access catch_discover_tests()
-include(${PROJECT_SOURCE_DIR}/external/Catch2/contrib/Catch.cmake)
+include(${PROJECT_SOURCE_DIR}/external/Catch2/extras/Catch.cmake)
 
 # Print the version of catch for info
 get_directory_property(
@@ -18,7 +18,6 @@ set(TEST_SOURCES
   ame_data_test.cpp
   converter_test.cpp
   isotope_test.cpp
-  main.cpp
   massTable_test.cpp
   nubase_data_test.cpp
   )
@@ -33,7 +32,7 @@ target_link_libraries(
   ${NDR_TEST_NAME}
   PRIVATE
   ${PROJECT_NAME}
-  Catch2::Catch2
+  Catch2::Catch2WithMain
   project_warnings
   project_options
   )
