Add a script that runs all the CMake presets
We want to test as much as possible before we push so this is a quality
of life script.

The common_functions script shouldn't enforce what is was enforcing, the
calling script can set up how it wants errors to be handled.

This new script outputs to log files which we don't want to track so
they are now ignored.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# With the move to cmake, many of these could be removed, but lets leave them in
-
 # The build directory and everything it contains
 **/[Bb]uild
 
@@ -12,6 +10,9 @@ compile_commands.json
 include/nuclear-data-reader/version.hpp
 # We want the doxygen config file
 !docs/Doxyfile.in
+
+# output files from the run_all_presets.sh script
+cmake_output*.log
 
 # emacs related files
 *~
