Use latest avaiable clang in CI
I'm running 16.0.6 locally, but the github runner is 14.0.0 and giving
compiler errors.
```
In file included from /home/runner/work/nuclear-data-reader/nuclear-data-reader/src/ame_data.cpp:1:
In file included from /home/runner/work/nuclear-data-reader/nuclear-data-reader/include/nuclear-data-reader/ame_data.hpp:15:
In file included from /home/runner/work/nuclear-data-reader/nuclear-data-reader/include/nuclear-data-reader/converter.hpp:22:
/usr/bin/../lib/gcc/x86_64-linux-gnu/13/../../../../include/c++/13/chrono:2320:48: error: call to consteval function 'std::chrono::hh_mm_ss::_S_fractional_width' is not a constant expression
        static constexpr unsigned fractional_width = {_S_fractional_width()};
                                                      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/13/../../../../include/c++/13/chrono:2320:48: note: undefined function '_S_fractional_width' cannot be used in a constant expression
/usr/bin/../lib/gcc/x86_64-linux-gnu/13/../../../../include/c++/13/chrono:2275:2: note: declared here
        _S_fractional_width()
        ^
1 error generated.
```
Try using the latest version of clang available to jammy.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        compiler: [clang++, g++]
+        compiler: [clang++-15, g++]
         type: [Debug, Release]
 
     steps:
@@ -29,7 +29,7 @@ jobs:
         run: echo "DIR=../Build" >> "$GITHUB_OUTPUT"
 
       - name: Install dependencies
-        run: sudo apt update && sudo apt install -y cmake ninja-build ccache lcov gcc g++ clang
+        run: sudo apt update && sudo apt install -y cmake ninja-build ccache lcov gcc g++ clang-15
 
       - name: Configure
         run: cmake -GNinja -H. -B${{ steps.build_dir.outputs.DIR }} -DNDR_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }} -DCMAKE_BUILD_TYPE=${{ matrix.type }} -DNDR_CODE_COVERAGE=ON
