Add the ability to output as a csv back in
I'm playing with something that needs the table as a csv file so adding
the functionality back. Example usage file has been updated to run the
csv output.

The inclusion of fmt as dependency of the headers slipped in when the
1995 and 1997 data files were added. This has been removed.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ cmake_output*.log
 
 # Output files from the example executable that uses the library
 masstable*.json
+masstable*.csv
 
 # emacs related files
 *~
