--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -42,9 +42,8 @@ jobs:
 
     - name: Configure and Build
       run: |
-        sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-        sudo apt update && sudo apt install -y ninja-build ccache gcc-11 g++-11
-        cmake -GNinja -H. -Bbuild -DCMAKE_CXX_COMPILER=/usr/bin/g++-11 -DCMAKE_BUILD_TYPE=Debug
+        sudo apt update && sudo apt install -y ninja-build ccache gcc g++
+        cmake -GNinja -H. -Bbuild -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_BUILD_TYPE=Debug
         cmake --build ./build
 
     - name: Perform CodeQL Analysis
